buffer abstraction, rendering fixes, diffuse lighting
- added quaternions (not unit tested yet)
- added lerping for vectors
- added unit tests for lerp
- added std::pair to reflection
- moved vertex buffers into the mesh instead of creating them every frame
- fixed mesh name saving in assimp wrapper
- cleaned up assimp wrapper
- added reflection support for mesh and model
- fixed frag and vert shaders
- added specified binding points for buffers
- fixed bug where camera cross product was flipped
- implemented diffuse lighting

--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -187,6 +187,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\flexformatter.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\mathconversions.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\matrix4x4.cpp" />
+    <ClCompile Include="src\FlexEngine\FlexMath\quaternion.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector2.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector3.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector4.cpp" />
@@ -240,6 +241,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\FlexMath\matrix1x1.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\matrix4x4.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\mathconstants.h" />
+    <ClInclude Include="src\FlexEngine\FlexMath\quaternion.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector1.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector2.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector3.h" />
