--- a/OpenGLRendering/imgui.ini
+++ b/OpenGLRendering/imgui.ini
@@ -9,9 +9,10 @@ Size=929,399
 Collapsed=0
 
 [Window][Properties]
-Pos=867,54
-Size=393,642
+Pos=871,48
+Size=403,412
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Image]
 ViewportPos=2002,169
@@ -19,5 +20,14 @@ ViewportId=0x04FC2B5B
 Size=924,395
 Collapsed=0
 
+[Window][Model Picker]
+Pos=871,462
+Size=403,273
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=1191,213 Size=403,687 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=393,385 Selected=0x199AB496
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=393,255 Selected=0x1DF8455B
 
