--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -122,7 +122,7 @@
       </EntryPointSymbol>
       <SubSystem>Console</SubSystem>
       <IgnoreSpecificDefaultLibraries>libcmtd.lib;libcmt.lib;msvcrt.lib</IgnoreSpecificDefaultLibraries>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;ImGuid.lib;fmodstudioL_vc.lib;assimp-vc143-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;crypt32.lib;ImGuid.lib;fmodstudioL_vc.lib;assimp-vc143-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
       <AdditionalDependencies>glfw3.lib;fastgltf.lib;fastgltf_simdjson.lib;ImGuid.lib;fmodstudioL_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -153,7 +153,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudioL.dll" "$(OutDir)" /s
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;ImGui.lib;fmodstudio_vc.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;crypt32.lib;ImGui.lib;fmodstudio_vc.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
       <SubSystem>Console</SubSystem>
@@ -208,6 +208,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\StateManager\statemanager.cpp" />
     <ClCompile Include="src\FlexEngine\uuid.cpp" />
     <ClCompile Include="src\FlexEngine\Wrapper\assimp.cpp" />
+    <ClCompile Include="src\FlexEngine\Wrapper\flexbase64.cpp" />
     <ClCompile Include="src\FlexEngine\Wrapper\date.cpp" />
     <ClCompile Include="src\FlexEngine\Wrapper\datetime.cpp" />
     <ClCompile Include="src\FlexEngine\Wrapper\file.cpp" />
@@ -267,6 +268,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\uuid.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\ansi_color.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\assimp.h" />
+    <ClInclude Include="src\FlexEngine\Wrapper\flexbase64.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\datetime.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\file.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\filelist.h" />
