--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -178,6 +178,9 @@
     <ClCompile Include="src\FlexEngine\FlexMath\quaternion.cpp">
       <Filter>src\FlexEngine\FlexMath</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\Wrapper\flexbase64.cpp">
+      <Filter>src\FlexEngine\Wrapper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -338,6 +341,9 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\FlexMath\quaternion.h">
       <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\Wrapper\flexbase64.h">
+      <Filter>src\FlexEngine\Wrapper</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
