--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -277,6 +277,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\Wrapper\range.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\simd.h" />
     <ClInclude Include="src\flx_api.h" />
+    <ClInclude Include="src\flx_windows.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\FlexEngine.h" />
     <ClInclude Include="src\FlexEngine\Core\application.h" />
