--- a/OpenGLRendering/imgui.ini
+++ b/OpenGLRendering/imgui.ini
@@ -9,10 +9,10 @@ Size=929,399
 Collapsed=0
 
 [Window][Properties]
-Pos=864,49
-Size=403,412
+Pos=871,37
+Size=409,713
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Image]
 ViewportPos=2002,169
@@ -21,18 +21,28 @@ Size=924,395
 Collapsed=0
 
 [Window][Model Picker]
-Pos=864,463
-Size=403,273
+Pos=0,425
+Size=300,325
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Statistics]
-Pos=11,50
-Size=236,372
+Pos=0,37
+Size=300,386
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,37
+Size=1280,713
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1184,214 Size=403,687 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=393,385 Selected=0x199AB496
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=393,255 Selected=0x1DF8455B
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=300,713 Split=Y Selected=0x47E8F9DC
+    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=227,386 Selected=0x47E8F9DC
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=227,325 Selected=0x1DF8455B
+  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=978,713 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=567,713 CentralNode=1
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=409,713 Selected=0x199AB496
 
