--- a/OpenGLRendering/imgui.ini
+++ b/OpenGLRendering/imgui.ini
@@ -21,16 +21,16 @@ Size=924,395
 Collapsed=0
 
 [Window][Model Picker]
-Pos=0,425
-Size=300,325
+Pos=871,37
+Size=409,713
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,2
 
 [Window][Statistics]
-Pos=0,37
-Size=300,386
+Pos=871,37
+Size=409,713
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,1
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,37
@@ -38,11 +38,7 @@ Size=1280,713
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=184,165 Size=1280,713 Split=X
-  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=300,713 Split=Y Selected=0x47E8F9DC
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=227,386 Selected=0x47E8F9DC
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=227,325 Selected=0x1DF8455B
-  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=978,713 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=567,713 CentralNode=1
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=409,713 Selected=0x199AB496
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=361,231 Size=1280,713 Split=X
+  DockNode  ID=0x00000004 Parent=0x8B93E3BD SizeRef=567,713 CentralNode=1
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=409,713 Selected=0x199AB496
 
