--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -13,6 +13,11 @@ Pos=1059,43
 Size=215,340
 Collapsed=0
 
+[Window][Cursor Position]
+Pos=60,60
+Size=240,66
+Collapsed=0
+
 [Docking][Data]
 DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
 
