--- a/OpenGLRendering/imgui.ini
+++ b/OpenGLRendering/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Properties]
 Pos=871,37
-Size=409,713
+Size=409,456
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Image]
 ViewportPos=2002,169
@@ -21,16 +21,16 @@ Size=924,395
 Collapsed=0
 
 [Window][Model Picker]
-Pos=871,37
-Size=409,713
+Pos=871,495
+Size=409,255
 Collapsed=0
-DockId=0x00000001,2
+DockId=0x00000003,0
 
 [Window][Statistics]
 Pos=871,37
-Size=409,713
+Size=409,456
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000002,1
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,37
@@ -38,7 +38,9 @@ Size=1280,713
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode  ID=0x00000004 Parent=0x8B93E3BD SizeRef=567,713 CentralNode=1
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=409,713 Selected=0x199AB496
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=200,187 Size=1280,713 Split=X
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=567,713 CentralNode=1
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=409,713 Split=Y Selected=0x199AB496
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=409,456 Selected=0x199AB496
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=409,255 Selected=0x1DF8455B
 
