--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -206,6 +206,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglmodel.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglrenderer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglshader.cpp" />
+    <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\opengltexture.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglvertex.cpp" />
     <ClCompile Include="src\FlexEngine\StateManager\statemanager.cpp" />
@@ -266,6 +267,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglmodel.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglrenderer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglshader.h" />
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\opengltexture.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglvertex.h" />
     <ClInclude Include="src\FlexEngine\StateManager\state.h" />
