--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,9 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=805,224
-Size=215,339
+Pos=0,721
+Size=1280,29
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -19,5 +20,7 @@ Size=240,66
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=Y
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,682 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,29 Selected=0x47E8F9DC
 
