<WIP> Bloom is done?
 but no brightness pass and clearing of depth buffering breaks

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,7 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=727,273
+ViewportPos=1354,640
+ViewportId=0xAD8E88F2
 Size=468,355
 Collapsed=0
 
@@ -19,5 +20,5 @@ Size=240,66
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=321,203 Size=1280,713 CentralNode=1
 
