--- a/MicroChess/MicroChess.vcxproj.filters
+++ b/MicroChess/MicroChess.vcxproj.filters
@@ -27,6 +27,12 @@
     <Filter Include="src\Physics">
       <UniqueIdentifier>{239557ac-711e-401c-ae1f-b024dff647f0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\CharacterMoves">
+      <UniqueIdentifier>{7932477a-3799-4ec1-ab14-d913069f8143}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Battle">
+      <UniqueIdentifier>{61a2e2be-1880-4d04-bfd6-b8a5dcd4c6b9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\texture.frag">
@@ -70,6 +76,24 @@
     <ClInclude Include="src\Components\physics.h">
       <Filter>src\Components</Filter>
     </ClInclude>
+    <ClInclude Include="src\Components\battlecomponents.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Layers\battle.h">
+      <Filter>src\Layers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CharacterMoves\moves.h">
+      <Filter>src\CharacterMoves</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\battledisplay.h">
+      <Filter>src\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Battle\targetingsystem.h">
+      <Filter>src\Battle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Battle\turnorderdisplay.h">
+      <Filter>src\Battle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -101,6 +125,24 @@
     </ClCompile>
     <ClCompile Include="src\Components\physics.cpp">
       <Filter>src\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Components\battlecomponents.cpp">
+      <Filter>src\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Layers\battle.cpp">
+      <Filter>src\Layers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CharacterMoves\moves.cpp">
+      <Filter>src\CharacterMoves</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\battledisplay.cpp">
+      <Filter>src\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Battle\targetingsystem.cpp">
+      <Filter>src\Battle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Battle\turnorderdisplay.cpp">
+      <Filter>src\Battle</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
